--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ parking_lot = "0.12.3"
 log = "0.4.22"
 tempfile = "3.12.0"
 serde_cbor = "0.11.2"
+lz4_flex = { version = "0.11", default-features = false }
