--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ log = "0.4.22"
 tempfile = "3.12.0"
 serde_cbor = "0.11.2"
 lz4_flex = { version = "0.11", default-features = false }
+rand = "0.8.5"
