--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install minimal stable
+        uses: dtolnay/rust-toolchain@stable
+      - name: Install nextest
+        uses: taiki-e/install-action@nextest
       - name: Check code formatting
         run: cargo fmt --all -- --check
       - name: Build
         run: cargo build
       - name: Run tests
-        run: cargo test
+        run: cargo nextest run
