--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,22 @@ log = "0.4.22"
 tempfile = "3.13.0"
 serde_cbor = "0.11.2"
 lz4_flex = { version = "0.11", default-features = false }
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["small_rng"] }
+scopeguard = "1"
+tracing = { version = "0.1", features = ["std"], default-features = false }
 
 [dev-dependencies]
 criterion = "0.5.1"
 csv = "1.3.0"
 rstest = "0.23.0"
 
+
 [[bench]]
 name = "storage_bench"
+harness = false
+
+[[bench]]
+name = "bustle_bench"
 harness = false
 
 [profile.bench]
