--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,18 @@ rand = "0.8.5"
 priority-queue = "2.1.1"
 
 [dev-dependencies]
+bustle = "0.5.1"
 criterion = "0.5.1"
 csv = "1.3.0"
+rocksdb = "0.22.0"
 rstest = "0.23.0"
 
 [[bench]]
 name = "storage_bench"
+harness = false
+
+[[bench]]
+name = "vs_rocksdb"
 harness = false
 
 [profile.bench]
