--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_cbor = "0.11.2"
 lz4_flex = { version = "0.11.3", default-features = false }
 rand = "0.8.5"
 priority-queue = "2.1.1"
+bitvec = "1.0.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
