--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rand = "0.8.5"
 priority-queue = "2.1.1"
 bitvec = "1.0.1"
 thiserror = "1.0.64"
+itertools = "0.13.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
