--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,17 @@ edition = "2021"
 
 [dependencies]
 memmap2 = "0.9.5"
-serde_json = "1.0.128"
-serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.132"
+serde = { version = "1.0.211", features = ["derive"] }
 parking_lot = "0.12.3"
 log = "0.4.22"
 tempfile = "3.13.0"
 ciborium = "0.2.2"
 lz4_flex = { version = "0.11.3", default-features = false }
 rand = "0.8.5"
-priority-queue = "2.1.1"
+bitvec = "1.0.1"
+thiserror = "1.0.64"
+itertools = "0.13.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -21,7 +23,11 @@ csv = "1.3.0"
 rstest = "0.23.0"
 
 [[bench]]
-name = "storage_bench"
+name = "random_data_bench"
+harness = false
+
+[[bench]]
+name = "real_data_bench"
 harness = false
 
 [profile.bench]
