--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rand = "0.8.5"
 bitvec = "1.0.1"
 thiserror = "1.0.65"
 itertools = "0.13.0"
+proptest = "1.5.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
