--- a/rocksdb-benches/Cargo.toml
+++ b/rocksdb-benches/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 bustle = "0.5.1"
-mmap-payload-storage = { path = ".." }
+mmap-value-storage = { path = ".." }
 parking_lot = "0.12.3"
 rocksdb = "0.22.0"
 serde_json = "1.0.132"
