--- a/rocksdb-benches/Cargo.toml
+++ b/rocksdb-benches/Cargo.toml
@@ -3,11 +3,14 @@ name = "rocksdb-benches"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+rocksdb = ["dep:rocksdb"]
+
 [dependencies]
 bustle = "0.5.1"
 mmap-value-storage = { path = ".." }
 parking_lot = "0.12.3"
-rocksdb = "0.22.0"
+rocksdb = { version="0.22.0", optional=true }
 serde_json = "1.0.132"
 tempfile = "3.13.0"
 
