--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ rand = "0.8.5"
 bitvec = "1.0.1"
 thiserror = "1.0.65"
 itertools = "0.13.0"
+atomicwrites = "0.4.4"
+nix = "0.29.0"
+bincode = "1.3.3"
 
 [dev-dependencies]
 criterion = "0.5.1"
