--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "blob_store"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+bench_rocksdb = ["dep:rocksdb"]
+
 [dependencies]
 memmap2 = "0.9.5"
 serde_json = "1.0.132"
@@ -19,11 +22,15 @@ atomicwrites = "0.4.4"
 nix = "0.29.0"
 bincode = "1.3.3"
 
+# this is not on dev-dependencies because dev-dependencies cannot be optional :(
+rocksdb = { version = "0.22.0", optional = true }
+
 [dev-dependencies]
 criterion = "0.5.1"
 csv = "1.3.0"
 rstest = "0.23.0"
 proptest = "1.5.0"
+bustle = "0.5.1"
 
 [[bench]]
 name = "random_data_bench"
@@ -35,6 +42,10 @@ harness = false
 
 [[bench]]
 name = "bitmask_bench"
+harness = false
+
+[[bench]]
+name = "bustle_bench"
 harness = false
 
 [profile.bench]
